# ProtoDAC

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  HeadphoneDAC.cywrk  HeadphoneDAC.yaml  ProjectConfig.yaml  ProtoDAC.cywrk  README.md  pyproject.toml  requirements.txt
Bootloader.cydsn/: Bootloader.cydwr  Bootloader.cyprj  comm.c  comm.h  main.c
Bootloader.cydsn/TopDesign/: TopDesign.cysch
FreeRTOS/Source/portable/GCC/ARM_CM3/: portmacro.h
HeadphoneDAC.cydsn/: CMakeLists.txt  FreeRTOSConfig.h  HeadphoneDAC.cydwr  HeadphoneDAC.cyprj  audio_out.c  audio_out.h  audio_proc.c  audio_proc.h  audio_tx.c  audio_tx.h  avril.c  avril.h  balloc.c  balloc.h  booter.c  booter.h  command.h  cptr.h  cyapicallbacks.h  ear_saver.c  ear_saver.h  filter.c  filter.h  list.c  list.h  list2.c  list2.h  log_level.h  logger.c  logger.h  loggers.h  logging.c  logging.h  main.c  muter.c  muter.h  nsrtc.c  nsrtc.h  project_config.h  serial.c  (+19 more)
HeadphoneDAC.cydsn/TopDesign/: TopDesign.cysch
ProtoDAC.cydsn/: CMakeLists.txt  FreeRTOSConfig.h  ProtoDAC.cydwr  ProtoDAC.cyprj  audio_proc.c  audio_proc.h  audio_tx.c  audio_tx.h  avril.c  avril.h  booter.h  cyapicallbacks.h  ear_saver.h  filter.c  knobs.c  knobs.h  logger.c  logger.h  loggers.c  logging.h  main.c  project_config.h  rtc.c  rtc.h  sram_handler.c  sram_handler.h  sync.c  usb.c  usb.h  usb_audio.c  usb_audio.h  usb_serial_logger.c  version.h
ProtoDAC.cydsn/TopDesign/: TopDesign.cysch
ProtoDAC.cydsn/byte_swap_v1_0/: byte_swap_v1_0.cysym  byte_swap_v1_0.cyudb
ProtoDAC.cydsn/byte_swap_v1_0/API/: byte_swap_v1_0.c  byte_swap_v1_0.h
ProtoDAC.cydsn/flush_v1_0/: flush_v1_0.cysym  flush_v1_0.cyudb
ProtoDAC.cydsn/flush_v1_0/API/: flush.h
ProtoDAC.cydsn/sync_counter_v1_0/: sync_counter_v1_0.cysym
ProtoDAC.cydsn/sync_counter_v1_0/API/: sync_counter_v1_0.c  sync_counter_v1_0.h
ProtoDAC.cydsn/sync_counter_v1_0/PSoC5/CY8C5888LTI-LP097/: sync_counter_v1_0.cyudb
pcb/gerbers/: headphone_dac-B_Cu.gbr  headphone_dac-B_Mask.gbr  headphone_dac-Edge_Cuts.gbr  headphone_dac-F_Cu.gbr  headphone_dac-F_Mask.gbr  headphone_dac-F_Paste.gbr  headphone_dac-F_Silkscreen.gbr  headphone_dac-NPTH.drl  headphone_dac-PTH.drl  headphone_dac-User_Drawings.gbr  headphone_dac-job.gbrjob
pcb/headphone_dac/: README.md  fp-lib-table  headphone_dac.kicad_pcb  headphone_dac.kicad_pro  headphone_dac.kicad_sch  sym-lib-table
scripts/: avril.py  bootload.py  build.py  buildp.py  comm.py  command.py  ftdi.py  listen.py  psoc_creator.py  release.py  send.py  talk.py  test.py
tests/: CMakeLists.txt  test_filter.cpp  test_hello.cpp  test_list.cpp  test_logging.cpp
